--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
-    
-    <title>React App</title>
+    <title>不会忘清单</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
